--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-click = "*"
 sqlalchemy = "*"
 tabulate = "*"
+click = "*"
+alembic = "*"
 
 [dev-packages]
 pytest = "*"
